Add missing fields in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "Sticky channel pattern for Tokio - routes messages to specific receivers based on ID hash for consistent message delivery"
+homepage = "https://github.com/devashishdxt/tokio-sticky-channel"
+repository = "https://github.com/devashishdxt/tokio-sticky-channel"
+documentation = "https://docs.rs/tokio-sticky-channel"
 categories = ["asynchronous", "concurrency", "data-structures"]
 keywords = ["tokio", "channel", "async", "mpsc", "sticky", "routing"]
 readme = "README.md"
